# legal-rag

./: .env.example  .gitignore  PROMPTS.md  README.md  pyproject.toml
schemas/: Track1_Extraction_Schema.json
screenshots/: desktop.ini
src/agents/: extraction_agent.py  gemini_client.py  prompts.py  validation_agent.py
src/api/: main.py  routes.py
src/cli/: main.py
src/core/: config.py  exceptions.py  logging.py
src/embeddings/: embeddings.py
src/ingestion/: chunker.py  loader.py
src/models/: contract_schema.py
src/retrieval/: retrieval.py  vector_store.py
src/services/: pipeline_service.py
