[project]
name = "legal-rag"
version = "0.1.0"
description = "Agentic RAG pipeline for legal contract extraction"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Hasan Raza" }
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.13.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "google-generativeai>=0.8.5",
    "faiss-cpu>=1.9.0",
    "sentence-transformers>=3.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pdfplumber>=0.11.0",
    "python-dotenv>=1.0.1",
    "jsonpatch>=1.33",
]

[project.scripts]
legal-rag = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
